Clean up CMake build.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -6,6 +6,7 @@ jobs:
   build-and-test:
     name: Build
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
