Make JSON header public.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,8 +7,7 @@ set (SOURCES "${lib_headers}"
 add_library(libtk205 ${SOURCES})
 target_include_directories(libtk205 PUBLIC ${PROJECT_SOURCE_DIR}/include/libtk205)
 target_include_directories(libtk205 PUBLIC ${PROJECT_SOURCE_DIR}/vendor/btwxt/src)
-target_include_directories(libtk205 PRIVATE ${PROJECT_SOURCE_DIR}/vendor/json/single_include)
-target_include_directories(libtk205 PRIVATE ${PROJECT_SOURCE_DIR}/vendor/json/include)
+target_include_directories(libtk205 PUBLIC ${PROJECT_SOURCE_DIR}/vendor/json/single_include)
 target_include_directories(libtk205 PRIVATE ${PROJECT_SOURCE_DIR}/vendor/valijson/include)
 
 # target_compile_features(libtk205 PUBLIC cxx_std_17)
